# nvpro_core

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_include.txt  NvFoundation.h  README.md  docgen.lua  docgen.py  docupdate.bat  include_gl.h  main.h  main_glfw.cpp  main_win32.cpp  main_x11.cpp  nvpsystem.cpp  nvpsystem.hpp  nvpsystem_linux.cpp  nvpsystem_win32.cpp  nvpwindow.cpp  nvpwindow.hpp  nvpwindow_internal.hpp  nvpwindow_internal_win32.cpp  platform.h  wininternal_win32_gl.cpp  wininternal_win32_vk.cpp  wininternal_win32_vk.hpp  wininternal_x11_gl.cpp  wininternal_x11_vk.cpp
GL/: glcustom.h  glsubset.h  wgl.h
PACKAGE-LICENSES/: AntTweakBar-LICENSE.md  OpenGL_Samples_Pack-LICENSE.md  ProggyClean-LICENSE.md  doxygen-LICENSE.md  iconic-LICENSE.md  lodepng-LICENSE.md  makeid-LICENSE.md  minimal-agx-LICENSE.md  miniz-LICENSE.md  nanort-LICENSE.md  portable-file-dialogs-LICENSE.md  tinyexr-LICENSE.md  tinygltf-LICENSE.md  tinyobjloader-LICENSE.md  tinythread-LICENSE.md  trackball-LICENSE.md  uSynergy-LICENSE.md  zlib-LICENSE.md
cmake/: FindAntTweakBar.cmake  FindCuda.cmake  FindGLEW.cmake  FindGLFW.cmake  FindOculusSDK.cmake  FindOpenGLText.cmake  FindOptix.cmake  FindSvcMFCUI.cmake  FindSvcSpaceMouse.cmake  FindVulkanSDK.cmake  FindZLIB.cmake  FindnvFx.cmake  packman.cmake  setup.cmake  utilities.cmake
doxygen/: CompileDox.bat  doxyfile.dox  extra.css
fileformats/: README.md  bmp.hpp  cadscenefile.cpp  cadscenefile.h  cadscenefile.inl  khr_df.h  nv_dds.cpp  nv_dds.h  nv_ktx.cpp  nv_ktx.h  nv_ktx.inl  texture_formats.cpp  texture_formats.h  tiny_converter.cpp  tiny_converter.hpp  tiny_gltf.h  tiny_gltf_freeimage.h  tinygltf_utils.cpp  tinygltf_utils.hpp
imgui/: README.md  imgui_axis.cpp  imgui_axis.hpp  imgui_camera_widget.cpp  imgui_camera_widget.h  imgui_handler.cpp  imgui_handler.h  imgui_helper.cpp  imgui_helper.h  imgui_icon.cpp  imgui_icon.h  imgui_impl_vk.cpp  imgui_impl_vk.h  imgui_internal.h  imgui_orient.cpp  imgui_orient.h
noise/: MersenneTwister.h  simplexnoise1234.cpp  simplexnoise1234.h
nv_helpers/: InertiaCamera.h  TimeSampler.h  anttweakbar.hpp  appwindowcamerainertia.hpp  appwindowprofiler.cpp  appwindowprofiler.hpp  average.hpp  bitarray.cpp  bitarray.hpp  cameracontrol.hpp  camerainertia.hpp  cameramanipulator.cpp  cameramanipulator.hpp  common.hpp  geometry.hpp  misc.hpp  noise1234.h  nsightevents.h  nv_dds.h  nvprint.cpp  nvprint.hpp  parametertools.cpp  parametertools.hpp  profiler.cpp  profiler.hpp  projectbase.cpp  projectbase.hpp  radixsort.hpp  shaderfilemanager.cpp  shaderfilemanager.hpp  simplexnoise1234.h  spin_mutex.hpp  stopwatch.hpp  tnulled.hpp
nv_helpers_cuda/: misc.hpp
nv_helpers_gl/: GLSLProgram.cpp  GLSLProgram.h  WindowInertiaCamera.h  WindowProfiler.cpp  WindowProfiler.hpp  appwindowprofiler_gl.cpp  appwindowprofiler_gl.hpp  base_gl.hpp  error.hpp  error_gl.hpp  extensions_gl.lua  glresources.hpp  glsltypes.hpp  glsltypes_gl.hpp  nv_dds.cpp  nv_dds.h  profiler.cpp  profiler.hpp  profilertimers_gl.cpp  profilertimers_gl.hpp  profilertimersgl.cpp  profilertimersgl.hpp  programmanager.cpp  programmanager.hpp  programmanager_gl.cpp  programmanager_gl.hpp
nv_helpers_vk/: base_vk.cpp  base_vk.hpp  context_vk.cpp  context_vk.hpp  extensions_vk.cpp  extensions_vk.hpp  extensions_vk.lua  pipeline_vk.hpp  shadermodulemanager_vk.cpp  shadermodulemanager_vk.hpp  structs_vk.hpp  structs_vk.lua  swapchain_vk.cpp  swapchain_vk.hpp  window_vk.cpp  window_vk.hpp
nv_math/: nv_math.cpp  nv_math.h  nv_math.inl  nv_math_glsltypes.h  nv_math_hlsltypes.h  nv_math_types.h  shadertypes.h
nvdx11/: appwindowprofiler_dx11.cpp  appwindowprofiler_dx11.hpp  profilertimers_dx11.cpp  profilertimers_dx11.hpp  shadermanager_dx11.cpp  shadermanager_dx11.hpp  window_dx11.hpp
nvdx12/: README.md  appwindowprofiler_dx12.cpp  appwindowprofiler_dx12.hpp  base_dx12.cpp  base_dx12.hpp  context_dx12.cpp  context_dx12.hpp  error_dx12.cpp  error_dx12.hpp  shadermanager_dx12.cpp  shadermanager_dx12.hpp  swapchain_dx12.cpp  swapchain_dx12.hpp
nvgl/: README.md  appwindowprofiler_gl.cpp  appwindowprofiler_gl.hpp  base_gl.hpp  contextwindow_gl.cpp  contextwindow_gl.hpp  error_gl.cpp  error_gl.hpp  extensions_gl.bat  extensions_gl.cpp  extensions_gl.hpp  extensions_gl.lua  glsltypes_gl.hpp  profiler_gl.cpp  profiler_gl.hpp  programmanager_gl.cpp  programmanager_gl.hpp
nvh/: README.md  alignment.hpp  anttweakbar.hpp  appwindowcamerainertia.hpp  appwindowprofiler.cpp  appwindowprofiler.hpp  assetsloader.cpp  assetsloader.hpp  average.hpp  bitarray.cpp  bitarray.hpp  boundingbox.hpp  cameracontrol.hpp  camerainertia.hpp  cameramanipulator.cpp  cameramanipulator.hpp  commandlineparser.cpp  commandlineparser.hpp  container_utils.hpp  filemapping.cpp  filemapping.hpp  fileoperations.hpp  geometry.hpp  gltfscene.cpp  gltfscene.hpp  inputparser.h  misc.hpp  nsightevents.h  nvml_monitor.cpp  nvml_monitor.hpp  nvprint.cpp  nvprint.hpp  parallel_work.cpp  parallel_work.hpp  parametertools.cpp  parametertools.hpp  primitives.cpp  primitives.hpp  profiler.cpp  profiler.hpp  (+11 more)
nvmath/: nvmath.h  nvmath.inl  nvmath_glsltypes.h  nvmath_hlsltypes.h  nvmath_types.h
nvoptix/: gl_optix.cpp  gl_optix.h  gltf_optix.cpp  gltf_optix.h  util_optix.cpp  util_optix.h
nvp/: NvFoundation.h  README.md  include_gl.h  linux_file_dialog.h  nvpfilesystem.cpp  nvpfilesystem.hpp  nvpsystem.cpp  nvpsystem.hpp  nvpsystem_linux.cpp  nvpsystem_win32.cpp  nvpwindow.cpp  nvpwindow.hpp  perproject_globals.cpp  perproject_globals.hpp  platform.h  resources.h
nvsockets/: cthread_s.cpp  cthread_s.hpp  socketclient.cpp  socketclient.hpp  socketsamplemessages.cpp  socketsamplemessages.hpp  socketserver.cpp  socketserver.hpp
nvvk/: README.md  acceleration_structures.cpp  acceleration_structures.hpp  allocator_dedicated_vk.hpp  allocator_dma_vk.hpp  allocator_dma_vkgl.cpp  allocator_dma_vkgl.hpp  allocator_vk.hpp  allocator_vma_vk.hpp  appbase_vk.cpp  appbase_vk.hpp  appbase_vkpp.cpp  axis_vk.hpp  (+102 more)
shaderc_wrapper/: CMakeLists.txt  shaderc_wrapper.c  shaderc_wrapper.def
(+151 files in other folders)
